@@ -9,9 +9,9 @@ export const MAXIMUM_PRICE_TO_SELL_IN_FAIR = 1.5;
 export const MINIMUM_PRICE_TO_SELL_IN_FAIR = 0.65;
 export const MAX_ITEMS_PER_FAIR_PAGE = 20;
 
-export const MAX_DELIVERY_AT_FULL_LEVEL = 9;
+export const MAX_DELIVERY_AT_FULL_LEVEL = 6;
 export const MIN_DELIVERY_AT_LEVEL_ZERO = 3;
-export const MAX_DELIVERY_PLANTATION_REQUIREMENT_AT_FULL_LEVEL = 14;
+export const MAX_DELIVERY_PLANTATION_REQUIREMENT_AT_FULL_LEVEL = 9;
 
 export const PLANTATION_WEIGHT_MODIFIERS = {
   BASE_MIN_VALUE: 0.7,
